[package]
name = "hellish-screams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulse = { version = "2.0", package = "libpulse-binding" }
psimple = { version = "2.0", package = "libpulse-simple-binding" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
binrw = "0.11.1"
modular-bitfield = "0.11.2"
